<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Elite Bank</string>

    <!-- Menu bar -->
    <string name="menu_contact_advisor">Contact Advisor</string>
    <string name="menu_filter">Filter</string>
    
    <!-- Navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_back">Back</string>

    <!-- Login page -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    
    <!-- Overview page -->
    <string name="overview_total_asset_value">Total Asset Value</string>
    <string name="change_currency">Change Currency</string>
    <string name="overview_myholdings_heading">My Holdings</string>
    <string name="overview_asset_value_heading">Asset Value</string>
    <string name="overview_investment">Investments</string>
    <string name="overview_cash_deposit">Cash / Deposits</string>
    <string name="overview_insurance">Insurance</string>
    <string name="overview_other_assets">Other Assets</string>
    <string name="cash_deposit_market_value">Market Value</string>
    <string name="insurance_policy_value">Policy Value</string>
    <string name="insurance_premium_paid_to_date">Premium Paid To Date</string>
    <string name="insurance_others">Others</string>
    <string name="insurance_sum_insured">Sum Insured</string>
    <string name="latest_updated_time">Updated as of </string>

    <!-- Investment page -->
    <string name="market_value">Market Value</string>
    <string name="book_cost">Book Cost</string>
    <string name="portfolio_investment_heading">My Investment</string>
    <string name="portfolio_investment_unrealised_capital">Unrealised Gain/Loss</string>
    <string name="portfolio_investment_market_value">Market Value</string>

    <!-- Pop Up Investment page -->
    <string name="pop_up_investment_launch_date">Launch date:</string>
    <string name="pop_up_investment_current_value">Current Value per Unit </string>
    <string name="pop_up_investment_six_month_change">6-month Change </string>
    <string name="pop_up_investment_yesterday_performance">Ytd Performance </string>
    <string name="pop_up_investment_one_year_performance">1-Year Performance</string>
    <string name="pop_up_investment_three_year_performance">3-Year Performance </string>
    <string name="pop_up_investment_dividend_yield">Dividend Yield </string>
    <string name="pop_up_investment_risk_level">Risk Level</string>

    <!-- Transaction History -->
    <string name="transaction_detail_reference_no">Transaction Reference No.</string>
    <string name="transaction_detail_investment_account">Investment Account</string>
    <string name="transaction_detail_description">Description</string>
    <string name="transaction_detail_order_amount">Order Amount</string>
    <string name="transaction_detail_settled_amount">Settled Amount</string>
    <string name="transaction_detail_realized_gain">Realised gain/loss</string>

    <!-- Market News -->
    <string name="american_news">American News</string>
    <string name="asian_news">Asian News</string>
    <string name="european_news">European News</string>
    <string name="filter_by">Filter by:</string>
    <string-array name="news_titles">
        <item>Aberdeen</item>
        <item>DBS</item>
        <item>Deutsche Bank</item>
        <item>Bank Indonesia</item>
    </string-array>

    <!-- Filter -->
    <string name="filter_date">dd/mm/yyyy</string>
</resources>
