<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Asset Value"
            android:textStyle="bold"
            android:textSize="@dimen/overview_total_value_fontsize"
            android:padding="@dimen/overview_total_value_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="$ 5,123,000,000.75"
            android:id="@+id/total_asset_value" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_price"
            android:gravity="left"
            android:padding="@dimen/overview_total_value_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ xxx,xxx.xx"
            android:gravity="right"
            android:id="@+id/portfolio_investment_totalmarket_price" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_cost"
            android:gravity="left"
            android:padding="@dimen/overview_total_value_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ xxx,xxx.xx"
            android:gravity="right"
            android:id="@+id/portfolio_investment_total_book_cost" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/portfolio_investment_unrealised_capital"
            android:gravity="left"
            android:padding="@dimen/overview_total_value_padding"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="+xx.xx% |"
            android:gravity="right"
            android:id="@+id/portfolio_investment_total_unrealised_capital_percentage"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="+ $xxx,xxx.xx"
            android:gravity="right"
            android:id="@+id/portfolio_investment_total_unrealised_capital_value" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/portfolio_investment_heading"
            android:textSize="@dimen/portfolio_investment_heading_fontsize"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/portfolio_investment_market_value"
            android:textSize="@dimen/portfolio_investment_heading_fontsize"
            android:gravity="center"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/investment_list"/>

</LinearLayout>